Added color toggle button no functionality yet

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
               <li><button class="HomeButtons"><a href = "fourth.html">Common Issues</a></button></li>
               <li><button class="HomeButtons"><a href = "fifth.html">Advanced Issues</a></button></li>
               <li><button class="HomeButtons"><a href = "sixth.html">Useful Resources</a></button></li>
+              <li><button class="ColorToggle">Colorblind Mode</button></li>
             </ul>
         </div>
         </footer>
