Changed home nav to match rest of site

--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
         <div class="HomeImage">
             <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
         </div>
-        <footer>
-        <div class="HomeNav">
-            <ul> 
-              <li><button class="HomeButtons"><a href = "second.html">Compaq History</a></button></li>  
-              <li><button class="HomeButtons"><a href = "third.html">Portable III</a></button></li> 
-              <li><button class="HomeButtons"><a href = "fourth.html">Common Issues</a></button></li>
-              <li><button class="HomeButtons"><a href = "fifth.html">Advanced Issues</a></button></li>
-              <li><button class="HomeButtons"><a href = "sixth.html">Useful Resources</a></button></li>
-              <li><button class="ColorToggle">Colorblind Mode</button></li>
-            </ul>
-        </div>
-        </footer>
+            <nav role="navigation">
+                <button class="DropdownButton">Navigation</button>
+                <ul class="DropdownContent">
+                  <li><a href = "index.html">Home</a></li> 
+                  <li><a href = "second.html">Compaq History</a></li>  
+                  <li><a href = "third.html">Portable III</a></li> 
+                  <li><a href = "fourth.html">Common Issues</a></li>
+                  <li><a href = "sixth.html">Useful Resources</a></li>
+                </ul>
+               </nav>
     </body>
 </html>
