attempted colorblind button

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <nav role="navigation">
                 <button class="DropdownButton">Navigation</button>
                 <ul class="DropdownContent">
-                  <li><a href = "index.html">Home</a></li> 
-                  <li><a href = "second.html">Compaq History</a></li>  
-                  <li><a href = "third.html">Portable III</a></li> 
-                  <li><a href = "fourth.html">Common Issues</a></li>
+                  <li><a href = "second.html">Compaq History</a></li> 
+                  <li><a href = "third.html">Portable III</a></li>  
+                  <li><a href = "fourth.html">Common Issues</a></li> 
+                  <li><a href = "fifth.html">Advanced Issues</a></li>
                   <li><a href = "sixth.html">Useful Resources</a></li>
                 </ul>
                </nav>
