testing aside content

--- a/second.html
+++ b/second.html
@@ -14,6 +14,12 @@
             </div>
         </header> 
         <main>
+            <aside>
+                <div>
+                    <img src= Images/AmericanTakeAwayAd.png><br>
+                    <caption>An ad for the original Compaq Portable</caption>
+                </div>
+            </aside>
             <div id="IBMPC">
                 <!--IBM PC Container-->
                 <img src="Images/Picture1.png" alt="Picture of the first IBM PC" width="200" height="150">
@@ -27,6 +33,12 @@
                     Compaq made one of the earliest PC clones with the unique twist of making it portable that put them on the map
                 </p>
             </div>
+            <aside>
+                <div>
+                    <img src= Images/PortableIAd.png width="366" height="512" class="Enlargable"><br>
+                    <caption>An ad for the original Compaq Portable</caption>
+                </div>
+            </aside>
             <div id="Osborne">
                 <!--First Portable Container-->
                 <img src="Images/Picture2.png" alt="Picture of the first portable PC" width="200" height="150">
