--- a/second.html
+++ b/second.html
@@ -36,7 +36,7 @@
             <aside>
                 <div>
                     <img src= Images/PortableIAd.png width="366" height="512" class="Enlargable"><br>
-                    <caption>An ad for the original Compaq Portable</caption>
+                    <caption>An ad for the original Compaq Portable, hover to enlarge</caption>
                 </div>
             </aside>
             <div id="Osborne">
