fixed aside bugs

--- a/second.html
+++ b/second.html
@@ -16,7 +16,7 @@
         <main>
             <aside>
                 <div>
-                    <img src= Images/AmericanTakeAwayAd.png><br>
+                    <img src= Images/AmericanTakeAwayAd.png width="396" height="286"><br>
                     <caption>An ad for the original Compaq Portable</caption>
                 </div>
             </aside>
@@ -63,12 +63,7 @@
                     Compaq was acquired by HP in 2001 for $25 billion, who used their brand name to make low-end desktops which was discontinued in 2013. HP also provided support for Compaq machines for a time.
                 </p>
             </div>
-            <aside>
-                <div>
-                    <img src= Images/AdWithText.png width="366" height="512"><br>
-                    <caption>An ad for the PortableIII</caption>
-                </div>
-            </aside>
+
             <div id="IBMResponse">
                 <img src="Images/IBM5155.png" alt="The IBM 5155 PC" width="200" height="150">
                 <h2>
