--- a/fourth.html
+++ b/fourth.html
@@ -14,6 +14,10 @@
         </div>
     </header>  
      <main>
+        <aside>
+          <img src= Images/KeyTest.PNG width="737" height="196"><br>
+          <caption>A working keyboard should look something like this in a modern key tester, even if keys are functional they may not turn green</caption>
+        </aside>
         <div id="KeyboardCable"> <!--Keyboard Container-->
           <img src = Images/Picture6.png alt ="A picture of a rotting keyboard cable">
           <h2>Rotting Keyboard Cable</h2>
