Added form tab to nav

--- a/fifth.html
+++ b/fifth.html
@@ -85,6 +85,7 @@
         <li><a href = "third.html">Portable III</a></li> 
         <li><a href = "fourth.html">Common Issues</a></li>
         <li><a href = "sixth.html">Useful Resources</a></li>
+        <li><a href =  "seventh.html">Contact Us</a></li>
       </ul>
      </nav>
      <!--Slideshow Script-->
