--- a/fourth.html
+++ b/fourth.html
@@ -96,6 +96,7 @@
         <li><a href = "third.html">Portable III</a></li>
         <li><a href = "fifth.html">Advanced Issues</a></li>
         <li><a href = "sixth.html">Useful Resources</a></li>
+        <li><a href =  "seventh.html">Contact Us</a></li>
       </div>
     </nav>
    </body>
