--- a/sixth.html
+++ b/sixth.html
@@ -88,6 +88,7 @@
           <li><a href = "third.html">Portable III</a></li> 
           <li><a href = "fourth.html">Common Issues</a></li>
           <li><a href = "fifth.html">Advanced Issues</a></li>
+          <li><a href =  "seventh.html">Contact Us</a></li>
         </ul>
      </nav>
    </body>
