--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                   <li><a href = "fourth.html">Common Issues</a></li> 
                   <li><a href = "fifth.html">Advanced Issues</a></li>
                   <li><a href = "sixth.html">Useful Resources</a></li>
+                  <li><a href =  "seventh.html">Contact Us</a></li>
                 </ul>
                </nav>
     </body>
