--- a/second.html
+++ b/second.html
@@ -87,6 +87,7 @@
               <li><a href = "fourth.html">Common Issues</a></li>
               <li><a href = "fifth.html">Advanced Issues</a></li>
               <li><a href = "sixth.html">Useful Resources</a></li>
+              <li><a href =  "seventh.html">Contact Us</a></li>
             </ul>
          </nav>
     </body>
