--- a/seventh.html
+++ b/seventh.html
@@ -6,11 +6,24 @@
         <title>Compaq Portable III Restoration</title>
       </head>
       <body>
-            <header>
-            <div class="PageTitle">
-                <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
-                <h1> Contact Us </h1>
-            </div>
-        </header> 
+            <main>
+                <header>
+                <div class="PageTitle">
+                    <img src = Images/Compaq-Logo-1982.png alt ="Compaq's original logo" width="200" height="150">
+                    <h1> Contact Us </h1>
+                </div>
+                </header> 
+            </main>
+            <nav role="navigation">
+                <button class="DropdownButton">Navigation</button>
+                <ul class="DropdownContent">
+                  <li><a href = "index.html">Home</a></li>   
+                  <li><a href = "third.html">Portable III</a></li> 
+                  <li><a href = "fourth.html">Common Issues</a></li>
+                  <li><a href = "fifth.html">Advanced Issues</a></li>
+                  <li><a href = "sixth.html">Useful Resources</a></li>
+                  <li><a href =  "seventh.html">Contact Us</a></li>
+                </ul>
+             </nav>
       </body>
 </html>
