--- a/seventh.html
+++ b/seventh.html
@@ -14,6 +14,23 @@
                 </div>
                 </header> 
             </main>
+            <form method="POST" enctype="multipart/form-data">
+                <p>
+                    <label for="Name">Full Name:</label>
+                    <input type="text" name="Name" id="Name" placeholder="Shane Beamer">
+                </p>
+                <p>
+                    <label for="Email">Email:</label>
+                    <input type="text" name="Email" id="Email" placeholder="Game@Cocks.edu">
+                </p>
+                <p>
+                    <label for="Comments">Comments/Suggestions:</label>
+                    <textarea name="Comments" id="Comments"  rows="5" cols="35"></textarea>
+                </p>
+                <p>
+                    <input type="submit" value="Submit">
+                </p>
+            </form>
             <nav role="navigation">
                 <button class="DropdownButton">Navigation</button>
                 <ul class="DropdownContent">
