--- a/seventh.html
+++ b/seventh.html
@@ -25,7 +25,7 @@
                 </p>
                 <p>
                     <label for="Comments">Comments/Suggestions:</label>
-                    <textarea name="Comments" id="Comments"  rows="5" cols="35"></textarea>
+                    <br><textarea name="Comments" id="Comments"  rows="5" cols="35"></textarea>
                 </p>
                 <p>
                     <input type="submit" value="Submit">
