Added more aside content

--- a/third.html
+++ b/third.html
@@ -14,6 +14,10 @@
         </div>
      </header> 
      <main>
+      <aside>
+        <img src= Images/Portable286Ad.png width="360" height="443"><br>
+        <caption>Compaq also used the 286 in the form factor of the PortbableI, making the Portable286</caption>
+      </aside>
         <div id="overview"> <!--Overview Container-->
           <img src = Images/PortableIIIad.png alt ="An ad for the Portable III">
           <h2>Overview</h2>
@@ -30,6 +34,13 @@
               this Washington Post review from 1987.</a>
           </p>
         </div>
+        <aside>
+          <br>
+          <img src= Images/CompaqGamingX3.png width="504" height="378"><br>
+          <caption>CGA could also work on the monochrome screen, giving deeper palettes of green or amber.<br> Compaq Portables were marketed more for business uses, 
+            <br>but you can still play most DOS games on them. Game pictured: Planet X3. 
+          </caption>
+        </aside>
         <div id="innovation"><!--Innovations Container-->
           <img src = Images/Picture5.png alt ="A magazine ad showing just how much smaller the Portable III was in relation to its predecessors">
           <h2>Innovations of the Portable Lineup</h2>
