--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
              <link rel ="stylesheet" href="StyleSheets/global.css">
              <link rel ="stylesheet" href="StyleSheets/articles.css">
         <title>Compaq Portable III Restoration</title>
+        <style>
+            html{
+                background-image: url(Images/HomeImage.png);
+                height: 100%; 
+                width: 100%;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        </style>
     </head>
     <body>
         <header>
@@ -13,9 +23,6 @@
               <h1> Home </h1>
             </div>
         </header> 
-        <div class="HomeImage">
-            <img src = Images/HomeImage.png alt ="All three generations of Compaq Portables side by side" width="1621" height="591"> <!--Default size: 1081x394-->
-        </div>
             <nav role="navigation">
                 <button class="DropdownButton">Navigation</button>
                 <ul class="DropdownContent">
@@ -26,6 +33,7 @@
                   <li><a href = "sixth.html">Useful Resources</a></li>
                   <li><a href =  "seventh.html">Contact Us</a></li>
                 </ul>
-               </nav>
+            </nav>
     </body>
+
 </html>
