Fixed broken links

--- a/sixth.html
+++ b/sixth.html
@@ -56,10 +56,10 @@
         <div id="manual">
             <h2>Manuals</h2>
             <p>
-                <a href="OtherLinks/Compaq Portable 3 Operations User Manual_text.pdf" target="_blank">User Operations Manual</a>
+                <a href="OtherLinks/Compaq_Portable_3_Operations_UserManual_text.pdf" target="_blank">User Operations Manual</a>
             </p>
             <p>
-                <a href="OtherLinks/Maintenence Manual.pdf" target="_blank">Technician's Manual(386 Version)</a> Many of the features outside of the different motherboards are interchangable, 
+                <a href="OtherLinks/Maintenence_Manual.pdf" target="_blank">Technician's Manual(386 Version)</a> Many of the features outside of the different motherboards are interchangable, 
                 the 286 manual seems to be harder to find. 
             </p>
             <p>
