--- a/fifth.html
+++ b/fifth.html
@@ -15,6 +15,10 @@
     </header> 
      <main>
         <div id=screen> <!--Screen Container-->
+          <aside>
+            <img src= Images/ScreenAssembly.PNG width="534" height="662"><br>
+            <caption>Diagram of the screen assembly, this diagram is also in the technician's manual</caption>
+          </aside>
           <div class="ScreenSlideShow"><!--Slideshow container-->
             <div class="ScreenSlides"> <!--Slides-->
               <div class="SlideNum">1/4</div>
@@ -50,11 +54,21 @@
             heat and cold puts a strain on the solder joints of the column drivers. Dead spots indicate circuits that are failing to transport power at all. Bad electrolytic capacitors
             can also cause a "fog" to appear on screen. Be very careful when working on this part, the flex and ribbon cables are very delicate in addition to high voltage. 
             When cleaning this part, the technician's manual states to ONLY use isopropyl alcohol when cleaning the inside of the screen, in addition it is also reccommended 
-            by hobbyists to use the strongest alcohol you can find when doing so. <br>
+            by hobbyists to use the strongest alcohol you can find when doing so. </p>
 
+            <p>
             <img src= Images/ColumnDriver.png width="200" height="150"><br>
             The column driver ICs are the biggest points of failure, each leg of this chip controls one horizontal or vertical line of pixels on the screen, in total they make 
-            a resolution of 640x400 pixels. Note that the horizontal column drivers are located underneath side panels, making them tricky to access.  <br> 
+            a resolution of 640x400 pixels. Note that the horizontal column drivers are located underneath side panels, making them tricky to access.</p> 
+
+            <aside>
+              <img src= Images/BrokenLatches.png width="550" height="378"><br>
+              <caption>The screen assembly has a system of latches to move it into two possible positions,<br>it isn't uncommon 
+                for these latches to break. The best way to replace these is 3D printing. 
+              </caption>
+            </aside>
+
+            <p>
             <img src= Images/ScreenRev1.png width="200" height="150"><img src= Images/ScreenRev2.png width="200" height="150"><br> 
             There are two hardware revisions to the screen. Revision 1 (left) is typically found on 286 models while Revision 2 (right) is found on 386 models. 
             These are both interchangable with each other which makes the repair option of using oldstock or a donor unit (a unit that is beyond repair but had a working part
