--- a/third.html
+++ b/third.html
@@ -35,7 +35,6 @@
           </p>
         </div>
         <aside>
-          <br>
           <img src= Images/CompaqGamingX3.png width="504" height="378"><br>
           <caption>CGA could also work on the monochrome screen, giving deeper palettes of green or amber.<br> Compaq Portables were marketed more for business uses, 
             <br>but you can still play most DOS games on them. Game pictured: Planet X3. 
@@ -53,6 +52,12 @@
             The hybrid card could be hard-set to one mode and by default it could also swap on the fly based on software needs. 
           </p>
         </div>
+        <aside>
+          <img src= Images/Portable386Ad.png><br>
+          <caption>
+            Ad for the 386 model, in addition to Compaq's 386 desktop
+          </caption>
+        </aside>
         <div id="Expansion">
           <img src= Images/ExpansionModule.png alt="An optional attachment which came with two expansion slots">
           <h2>Expandability</h2>
@@ -65,6 +70,10 @@
             also had two internal expansion slots but they only supported propietary modems and RAM expansions. 
           </p>
         </div>
+        <aside>
+          <img src= Images/SLT286.png width="300" hieght="400"><br>
+          <caption>Compaq's first true laptop, the SLT/286(1988)</caption>
+        </aside>
       <div id="WhatNext">
         <img src = Images/Portable486.png alt="The last Portable made by Compaq">
         <h2>After the Portable III</h2>
