Added in YouTube Videos

--- a/sixth.html
+++ b/sixth.html
@@ -15,6 +15,12 @@
         </div>
     </header> 
      <main>
+        <aside>
+          <iframe width="600" height="500" src="https://www.youtube.com/embed/videoseries?list=PL13A65492BC0A4B8B" title="YouTube video player" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </iframe><br>
+        <caption>A collection of Compaq ads done by Monty Python actor John Cleese</caption>
+        </aside>
         <div id="links"> <!--Keyboard Container-->
           <img src = Images/CroppedAd.png alt ="An ad boasting the Compaq's featues" width="838" height="585"> <!--Default Dimensions: 2513x1755--> 
           <!--Other pics will be used as well, is too sloppy to dump them all unstyled-->
