--- a/third.html
+++ b/third.html
@@ -16,7 +16,7 @@
      <main>
       <aside>
         <img src= Images/Portable286Ad.png width="360" height="443"><br>
-        <caption>Compaq also used the 286 in the form factor of the PortbableI, making the Portable286</caption>
+        <caption>Compaq also used the 286 in the form factor of the PortbableI, <br>making the Portable286</caption>
       </aside>
         <div id="overview"> <!--Overview Container-->
           <img src = Images/PortableIIIad.png alt ="An ad for the Portable III">
@@ -36,7 +36,7 @@
         </div>
         <aside>
           <img src= Images/CompaqGamingX3.png width="504" height="378"><br>
-          <caption>CGA could also work on the monochrome screen, giving deeper palettes of green or amber.<br> Compaq Portables were marketed more for business uses, 
+          <caption>CGA could also work on the monochrome screen,<br> giving deeper palettes of green or amber.<br> Compaq Portables were marketed more for business uses, 
             <br>but you can still play most DOS games on them. Game pictured: Planet X3. 
           </caption>
         </aside>
