Added a few links

--- a/sixth.html
+++ b/sixth.html
@@ -53,7 +53,22 @@
                 A USB Floppy Drive
             </a> is useful for finding important files online. 
           </p>
-          
+
+          <p>
+            <a href="https://www.amazon.com/dp/B08KHSPYQB?ref=nb_sb_ss_w_as-reorder-t1_ypp_rep_k0_1_7&amp=&crid=KF97BDLZ22GE&sprefix=posidri&th=1" target="_blnak">A Pozidriv Screwdriver</a>
+            is needed for some screws, namely the screws for the plasma screen's main PCB. 
+          </p>
+
+          <p>
+            <a href="https://www.ifixit.com/products/essential-electronics-toolkit" target="_blank">An Ifixit Toolkit</a>
+            provides a lot of tools important to electronics repair. The Essential Electronics Toolkit works well and is reasonably priced. 
+          </p>
+
+          <p>
+            <a href="https://www.amazon.com/SEDY-8-Pieces-Torx-L-Tamperproof-Wrench/dp/B083BJ8QFF/ref=sr_1_4?crid=1GV32PUGX64VA&keywords=torx+wrench+set&qid=1669652139&s=hi&sprefix=torx%2Ctools%2C144&sr=1-4" target="_blank">A Torx Wrench Set</a>
+            such as this is needed for some casing screws, mostly size T15. There are torx screwdrivers like this, though some of the screws are tricky to access and the torx wrench provides the best access and leverage overall.
+          </p>
+
           <p>
             <a href="https://www.digikey.com" target="_blank">Digikey</a> and <a href="https://www.mouser.com" target="_blank">Mouser</a> are the go-to sites for electronic components, such as replacement capacitors.
           </p>
