Probably the final tweaks

--- a/third.html
+++ b/third.html
@@ -49,8 +49,8 @@
             CGA (Color Graphics Adapter) was more expensive but offered (by today’s standards crude) color to your machine. CGA Text is a bit “chunky” and the overall resolution of CGA was lower than MDA.
             With Compaq’s portable lineup, the monitor was built in and in order to make the machine accessible they made a hybrid graphics card that supports both CGA and MDA. 
             The built-in monitor for most Portables was monochrome, but CGA could be fully utilized on an external monitor. 
-            The hybrid card could be hard-set to one mode and by default it could also swap on the fly based on software needs. Much of Compaq's Marketing claimed they could run IBM 
-            software faster than IBM themselves, this was done through proprietary chips that smoothened the performance of the Portable lineup. 
+            The hybrid card could be hard-set to one mode and by default it could also swap on the fly based on software needs. Much of Compaq's marketing claimed they could run IBM 
+            software faster than IBM themselves, this was done through proprietary chips that boosted the performance of the Portable lineup. 
           </p>
         </div>
         <aside>
