--- a/fourth.html
+++ b/fourth.html
@@ -54,6 +54,10 @@
             <a class="prev" onclick="plusSlides(-1)">&laquo;</a>
             <a class="next" onclick="plusSlides(1)">&raquo;</a>
           </div>
+          <aside>
+            <img src= Images/solder.png alt="Dos and don'ts of soldering" width="486" height="286"><br>
+            <caption>A useful diagram on how to solder.</caption>
+          </aside>
           <h2>Rotting Keyboard Cable</h2>
           <p>
             Dry rot of the keyboard connector cable is common. 
@@ -69,17 +73,18 @@
             Note that Enter, Shift, Control, and a few others may not turn green but will be functional. 
           </p>
         </div>
+        <div>
         <div id="cmos"><!--CMOS Container-->
-          <img src = Images/CMOSBattery.PNG alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right" width="200" height="200">
+          <img src = Images/CMOSBattery.PNG alt ="The 286 model's CMOS Battery, " width="400" height="400">
           <h2>Dead CMOS Battery</h2>
           <p>
             This issue may only become apparent later, as sometimes the battery still has some juice in it upon bootup. You need the diagnostics floppy disk to access the BIOS and reenter settings, which has been made freely available online. 
-            Documentation on replacing the battery is nonexistent. And by modern standards this battery is strange, a dual cell 3.4V Lithium brick. Refurbishing the oringinal
+            Documentation on replacing the battery is nonexistent. And by modern standards this battery is strange, a dual cell 3.4V Lithium brick. Refurbishing the original
             or modding in a modern replacement are the only options here. WARNING: tampering with battery cells is a fire hazard.    
           </p>
       </div>
       <div id="floppy"><!--Floppy Container-->
-        <img src = Images/Picture7.png alt ="A picture of the 286 model's motherboard, CMOS batterty being towards the top right">
+        <img src = Images/Picture7.png alt ="All three sizes of floppy disk, 8in, 5.25in, and 3.5in">
         <h2>Dirty or Jammed Floppy Drive</h2>
         <p>
           Dust in the floppy drive may make the drive not function properly, in addition to drive rails getting jammed after years of not being used.
