nav role unneeded

--- a/fifth.html
+++ b/fifth.html
@@ -91,7 +91,7 @@
           </p>
         </div>
      </main>
-     <nav role="navigation">
+     <nav>
       <button class="DropdownButton">Navigation</button>
       <ul class="DropdownContent">
         <li><a href = "index.html">Home</a></li> 
