--- a/fourth.html
+++ b/fourth.html
@@ -93,7 +93,7 @@
     </div>
     </main>
     <script src="Scripts/Slideshow.js"></script>
-    <nav role="navigation">
+    <nav>
       <button class="DropdownButton">Navigation</button>
       <ul class="DropdownContent">
         <li><a href = "index.html">Home</a></li>
