--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <h1> Home </h1>
             </div>
         </header> 
-            <nav role="navigation">
+            <nav>
                 <button class="DropdownButton">Navigation</button>
                 <ul class="DropdownContent">
                   <li><a href = "second.html">Compaq History</a></li> 
