--- a/seventh.html
+++ b/seventh.html
@@ -43,7 +43,7 @@
                     </p>
                 </form>
             </div>
-            <nav role="navigation">
+            <nav>
                 <button class="DropdownButton">Navigation</button>
                 <ul class="DropdownContent">
                   <li><a href = "index.html">Home</a></li>   
