--- a/second.html
+++ b/second.html
@@ -79,7 +79,7 @@
                 </p>
             </div>
         </main>
-        <nav role="navigation">
+        <nav>
             <button class="DropdownButton">Navigation</button>
             <ul class="DropdownContent">
               <li><a href = "index.html">Home</a></li>   
