--- a/sixth.html
+++ b/sixth.html
@@ -101,7 +101,7 @@
         </div>
      </main>
      
-     <nav role="navigation">
+     <nav>
       <button class="DropdownButton">Navigation</button>
         <ul class="DropdownContent">
           <li><a href="index.html">Home</a></li> 
